Changes for 1.6.5

 - [ZBX-864] fixed node names instead of group names (Artem)

Changes for 1.6.4

 - [ZBX-845] fixed calculation of delayed items for non-local nodes in Queue screen (Sasha)
 - [ZBX-842] fixed duplicate triggers in "Last 20 issues" in dashboard (Artem)
 - [DEV-323] removed master nodes from dropdown (Artem)
 - [ZBX-837] removed sid from Zabbix logo link (Vedmak)
 - [ZBX-589] fixed processing of quoted floating point values (Sasha)
 - [ZBX-836] fixed probem with permissions of proxy shared memory (Sasha)
 - [ZBX-833] fixed link from maps element to trigger status page (Artem)
 - [ZBX-831] DM: fixed synchronization of trends data (Sasha)
 - [DEV-137] DM: improved performance of historical data synchronization (Sasha)
 - [ZBX-827] fixed possible bug in actions hints (Artem)
 - [ZBX-826] fixed problem displaying disabled web checks (Artem)
 - [ZBX-825] fixed problem with changing item status in configuration web and items screens (Artem)
 - [ZBX-822] fixed dashboard when logged in as guest (Artem)
 - [ZBX-763] fixed warning message displayed at the bottom when saving graphs without items (Vedmak)  
 - [ZBX-821] fixed dashboard context menu "Latest data" does not show required host (Vedmak)
 - [ZBX-819] Error in import script (Artem)
 - [ZBX-818] In configuration->items, if selected Host All, items hosts are shown in table (Vedmak)

Changes for 1.6.3

 - [ZBX-815] fixed month representation in seconds in most busy triggers report (Artem)
 - [DEV-267] improved item template-update (Artem)
 - [ZBX-814] fixed bad performance of the string functions - added two database indexes (Sasha)
 - [ZBX-804] added support of text items for functions str, regexp and iregexp (Sasha)
 - [ZBX-668] "Cannot open Json object" message replaced with a better one in agent log (Sasha)
 - [ZBX-812] fixed Windows agent crash when using incorrect third parameter in proc_info metric (Sasha)
 - [ZBX-809] fixed memory leak while processing proc.num metric under Win2008 (Sasha)