@@ -1,5 +1,6 @@
 Changes for 1.6.5
 
+ - [ZBX-847] fixed error in "Status of ZABBIX" when server is not running (Vedmak)
  - [ZBX-864] fixed node names instead of group names (Artem)
 
 Changes for 1.6.4
